# advent-of-code

./: .gitignore  Cargo.toml  aoc  requirements.txt  template.py
2015/python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2016/python/: day24.py
2017/: Cargo.toml
2017/go/: day15.go  day18.go  day21.go  day22.go  day23.go  day24.go  day25.go  go.mod  input  util
2017/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  (+11 more)
2018/: Cargo.toml
2019/: Cargo.toml
2019/src/: cpu.rs  day13.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day7.rs  lib.rs
2019/src/day12/: mod.rs  parser.rs
2019/src/day14/: parser.rs
2019/src/day15/: astar.rs  nearest.rs  point.rs
2020/: Cargo.toml
2021/: Cargo.toml
2023/: Cargo.toml
2024/: Cargo.toml
2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc-runner/: README.md  clearscreen_unix.go  clearscreen_windows.go  fetch_input.go  go.mod  languages.go  main.go  watcher.go  write_template.go
src/: cpu.rs  day1.rs  day10.rs  day11.rs  day13.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
templates/: Cargo.toml  lib.rs  template.go  template.py  template.rs
(+240 files in other folders)
