[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Bruce Armstrong <bruce@fortressofgeekdom.org>"]

[lib]
bench = false

[dependencies]
aoc = { path = "../lib/rust" }
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
num = "0.4.0"
nom = "7.1.3"
priority-queue = "1.3.2"

[dependencies.pancurses]
version = "0.17.0"
features = ["wide"]
