[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"
authors = ["Bruce Armstrong <bruce@fortressofgeekdom.org>"]

[lib]
bench = false

[dependencies]
aoc = { path = "../lib/rust" }
aoc-runner = "^0.3"
aoc-runner-derive = "^0.3"
itertools = "0.13.0"
nom = "7.1.3"
paste = "1.0.15"

[profile.release]
debug = true
